[package]
name = "mcdl"
version = "0.2.5"
authors = ["Isaac Samsky <github+ibsamsky@cark.moe>"]
homepage = "https://github.com/ibsamsky/mcdl"
edition = "2024"
rust-version = "1.85.0"
build = "build.rs"

[dependencies]
bytes = "1.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.2"
derive_more = { version = "2.0.1", default-features = false, features = ["constructor", "display", "is_variant"] }
dialoguer = { version = "0.11.0", default-features = false }
directories = "6.0.0"
indicatif = "0.17.9"
itertools = "0.14.0"
lazy-regex = "3.4.1"
parking_lot = "0.12.1"
prettytable-rs = { version = "0.10.0", default-features = false }
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "rustls-tls", "http2", "json"]}
rmp-serde = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.9.0"
shell-escape = "0.1.5"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.0.4"
rand = "0.9.0"
scopeguard = { version = "1.2.0", default-features = false }

[build-dependencies]
vergen-gix = { version = "1.0.6", features = ["cargo"] }

[target.'cfg(windows)'.dependencies]
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.35"
tar = "0.4.43"

[profile.dev]
opt-level = 1

[profile.release]
debug = 1

[profile.release-small]
inherits = "release"
lto = "thin"
opt-level = "s"
debug = 0

[profile.release-tiny]
inherits = "release"
lto = true
opt-level = "z"
debug = 0
codegen-units = 1
strip = "symbols"
split-debuginfo = "packed"
