[package]
name = "mcdl"
version = "0.2.5"
authors = ["Isaac Samsky <github+ibsamsky@cark.moe>"]
homepage = "https://github.com/ibsamsky/mcdl"
edition = "2024"
rust-version = "1.85.0"
build = "build.rs"

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", default-features = false, features = ["constructor", "display", "is_variant"] }
dialoguer = { version = "0.11.0", default-features = false }
directories = "6.0.0"
indicatif = "0.18.0"
itertools = "0.14.0"
lazy-regex = "3.4.1"
parking_lot = "0.12.4"
prettytable-rs = { version = "0.10.0", default-features = false }
reqwest = { version = "0.12.22", default-features = false, features = ["charset", "rustls-tls", "http2", "json"]}
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
shell-escape = "0.1.5"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = { version = "0.9.2", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
scopeguard = { version = "1.2.0", default-features = false }
tempfile = "3.20.0"

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["cargo"] }

[target.'cfg(windows)'.dependencies]
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
flate2 = "1.1.2"
tar = "0.4.44"

[profile.dev]
opt-level = 1

[profile.release]
debug = 1

[profile.release-small]
inherits = "release"
lto = "thin"
opt-level = "s"
debug = 0

[profile.release-tiny]
inherits = "release"
lto = true
opt-level = "z"
debug = 0
codegen-units = 1
strip = "symbols"
split-debuginfo = "packed"
